--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/orm2
 spring.datasource.username=orm2
 spring.datasource.password=orm2
 
-# JPA 설정
+# JPA, Hibernate 설정
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 # HikariCP 설정  (Default DB Connection Pool)
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
+
+# Secret Key
+jwt.secret=${ORM2_TEST_BY_JHONG}
