씨발 다 갈아엎을 것들

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 
 # Secret Key
-jwt.secret=${ORM2_TEST_BY_JHONG}
+jwt.secret=ORM2_TEST_BY_JHONG
